# RetroSpeedBot

./: .env  .gitignore  Cargo.toml  README.md  build.rs  install.sh  retro_speed_bot.service
migrations/: 001_addgametable.sql  002_add_category.sql  003_add_race.sql  004_initial_data.sql  005_add_adrmg.sql  006_add_hundo_nmg.sql  007_add_ffx.sql
procm/: Cargo.toml
procm/src/: lib.rs
src/: constants.rs  discord.rs  main.rs  models.rs
