[package]
name = "retro_speed_bot"
version = "0.1.0"
authors = ["Alexander <ancorwin@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procm = {path = "procm"}
twilight-cache-inmemory = "0.3"
twilight-gateway = "0.3"
twilight-http = "0.3"
twilight-model = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util"] }
futures = "0.3.14"
twilight-command-parser = "0.3"
regex = "1"
log = "0.4.14"
env_logger = "0.8.3"
custom_error = "1.9.2"

serde_json = "1.0"
derive_builder = "0.10.2"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" , "sqlite", "chrono"] }
chrono = "0.4"
chrono-tz = "0.5"
dotenv = "0.15.0"
lru = "0.6.5"

[build-dependencies]
sqlx = { version = "0.5", features = ["runtime-tokio-rustls" , "sqlite",] }
tokio = { version = "1.0", features = ["macros", ] }
dotenv = "0.15.0"